[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Anton Butyrin <butyrinhome@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
